<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        style="@style/TitleFont"
    />

    <ImageView
        android:contentDescription="@string/imagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelFont"
        android:text="@string/usuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLogin"
        android:inputType="text"
        android:hint="@string/login"
    >

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSenha"
        android:inputType="textPassword"
        android:hint="@string/ipsenha"
    >
        <requestFocus />
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="entrar"
        android:text="@string/entrar" />


</LinearLayout>

