<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_app"
        style="@style/TitleFont"
    />
    <ImageView
        android:contentDescription="@string/imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_margin="50dp"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_seleciona"
        android:text="@string/seleciona_usuario"
        android:layout_gravity="bottom"
        android:onClick="selecionaUsuario"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_registra_usuario"
        android:text="@string/registra_usuario"
        android:layout_gravity="bottom"
        android:onClick="registrarUsuario"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sair"
        android:text="@string/sair"
        android:onClick="sair"
        android:layout_gravity="clip_vertical"
    >

    </Button>
</LinearLayout>

