<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_registrar"
        style="@style/TitleFont"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnpj"
    />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cnpj"
        android:id="@+id/reg_cnpj"
        android:inputType="number"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
    />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:id="@+id/reg_senha"
        android:password="true"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registrar"
        android:text="@string/registra_usuario" />





</LinearLayout>

